--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -25,8 +25,8 @@ jobs:
        
       - uses: subosito/flutter-action@v1
         with:
-          flutter-version: '3.13.9'
-          channel: stable
+          channel: any
+          flutter-version: 3.x
         
       - name: enable flutter web
         run: |
@@ -59,7 +59,7 @@ jobs:
         
       - name: npm install
         run: npm install
-        
+
       - name: copy web build files
         run: |
           cp -rf build/web/* public/
